--- a/templates/contact/contact_form.html.twig
+++ b/templates/contact/contact_form.html.twig
@@ -24,12 +24,6 @@
         {{ form_widget(form.fromEmail) }}
     </fieldset>
 
-   {# <fieldset>
-        {{ form_label(form.fixNumber) }}
-        {{ form_errors(form.fixNumber) }}
-        {{ form_widget(form.fixNumber) }}
-    </fieldset> #}
-
-    <button type="submit" class="btn btn-primary">Valider</button>
+    <button type="submit">Valider</button>
     {{ form_end(form) }}
 {% endblock %}
