--- a/templates/contact/contact_form.html.twig
+++ b/templates/contact/contact_form.html.twig
@@ -1,18 +1,15 @@
 {% extends 'base.html.twig' %}
 
+{% form_theme form 'bootstrap_5_layout.html.twig' %}
+
 {% block body %}
 
+<div class="container">
  <h1>Formulaire de contact</h1>
 
     {{ form_start(form) }}
 
-    <fieldset>
-        {{ form_label(form.content) }}
-        {{ form_errors(form.content) }}
-        {{ form_widget(form.content) }}
-    </fieldset>
-
-     <fieldset>
+       <fieldset>
         {{ form_label(form.fromName) }}
         {{ form_errors(form.fromName) }}
         {{ form_widget(form.fromName) }}
@@ -24,6 +21,13 @@
         {{ form_widget(form.fromEmail) }}
     </fieldset>
 
-    <button type="submit">Valider</button>
+    <fieldset>
+        {{ form_label(form.content) }}
+        {{ form_errors(form.content) }}
+        {{ form_widget(form.content) }}
+    </fieldset>
+
+    <button type="submit" class="btn btn-success">Valider</button>
     {{ form_end(form) }}
+</div>
 {% endblock %}
