--- a/templates/contact/contact_form.html.twig
+++ b/templates/contact/contact_form.html.twig
@@ -1,12 +1,18 @@
 {% extends 'base.html.twig' %}
 
 {% form_theme form 'bootstrap_5_layout.html.twig' %}
-
+{% block title %}Demande de contact{% endblock %}
 {% block body %}
 
 <div class="container">
  <h1>Formulaire de contact</h1>
 
+    {% for message in app.flashes('success') %}
+        <div class="alert alert-success" role="alert">
+            {{ message }}
+        </div>
+    {% endfor %}
+    
     {{ form_start(form) }}
 
        <fieldset>
